--- a/index.html
+++ b/index.html
@@ -8,40 +8,6 @@
 <body>
 
     <h1 id="head"></h1>
-    <script>
-        const head = document.getElementById("head");
-
-        let arr = [1,2,3,4,5];
-        function add(a) {
-            return function(b) {
-                let html = a + b;
-                return head.innerText = html;
-            }
-        } 
-        add(2)(5);
-
-        (function() {
-            //console.log(( window.foo || ( window.foo = "bar" ) ));
-        })()
-
-//         function foo1()
-// {
-//   return {
-//       bar: "hello"
-//   };
-// }
-// console.log(foo1())
-
-function foo2()
-{
-  return
-  {
-      bar: "hello"
-  };
-}
-console.log(foo2())
-
-
-</script>
+    <script src="./main.js"></script>
 </body>
 </html>
